--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     </dependencies>
 
     <build>
+        <finalName>piglatin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
